﻿- Added a `ScaleToFit` element - scales it child down so it does fit in the provided space,
- Improved default Fluent configuration behavior for elements: Scale, Padding, Translate.